--- a/UizaPlayerTest/Info.plist
+++ b/UizaPlayerTest/Info.plist
@@ -20,6 +20,10 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>App needs access to camera for livestream</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>App needs access to microphone for livestream</string>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
