--- a/UizaSDKTest/Info.plist
+++ b/UizaSDKTest/Info.plist
@@ -4,7 +4,8 @@
 <dict>
 	<key>NSAppTransportSecurity</key>
 	<dict>
-		<key>NSAllowsArbitraryLoads</key><true/>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
 	</dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
@@ -49,9 +50,5 @@
 	<string>Please allow camera to start livestream</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>Please allow microphone to start livestream</string>
-    <key>NSAppTransportSecurity</key>
-    <dict>
-        <key>NSAllowsArbitraryLoads</key><true/>
-    </dict>
 </dict>
 </plist>
