--- a/UizaSDK.xcodeproj/xcshareddata/xcschemes/UizaSDKUnitTests.xcscheme
+++ b/UizaSDK.xcodeproj/xcshareddata/xcschemes/UizaSDKUnitTests.xcscheme
@@ -11,7 +11,17 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       codeCoverageEnabled = "YES"
+      onlyGenerateCoverageForSpecifiedTargets = "YES"
       shouldUseLaunchSchemeArgsEnv = "YES">
+      <CodeCoverageTargets>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "6367257E226868280072612F"
+            BuildableName = "UizaSDKTest.app"
+            BlueprintName = "UizaSDKTest"
+            ReferencedContainer = "container:UizaSDK.xcodeproj">
+         </BuildableReference>
+      </CodeCoverageTargets>
       <Testables>
          <TestableReference
             skipped = "NO">
